<resources>
    <string name="app_name">Combined App</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi animi nesciunt magni distinctio blanditiis. Repellat laudantium harum ipsa necessitatibus inventore optio vitae suscipit error animi velit a, tempore eos expedita.</string>
    <string name="activity_lifecycle">Activity Lifecycle</string>
    <string name="hi">Hi!</string>

    <string name="delete">Delete</string>
    <string name="fire_normal_alert">Fire Normal Alert</string>
    <string name="fire_custom_alert">Fire Custom Alert</string>
    <string name="start_background_service">Start Background Service</string>
    <string name="stop_background_service">Stop Background Service</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="stop_foreground_service">Stop Foreground Service</string>
    <string name="context_registered_broadcast_for_airplane_mode">Context Registered Broadcast for Airplane Mode</string>
    <string name="click_here_to_change_using_local_broadcast">Click Here to change using Local Broadcast</string>
    <string name="enter_your_text">Enter your text</string>
    <string name="first_fragment_nclick_to_change">First fragment\nClick to change</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="and_password">and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="unable_to_log_in">Unable to Log in?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_user">Create user</string>
    <string name="second_fragment_nclick_to_change">Second fragment\nClick to change</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="fire_toast">Fire Toast</string>
    <string name="fire_snackbar">Fire Snackbar</string>
    <string name="this_is_a_heading_of_news">This is a Heading of News</string>
    <string name="this_is_the_of_author">This is the of Author</string>
    <string name="this_is_publish_date">This is publish Date</string>
    <string name="this_is_the_body_of_above_mentioned_news_article">This is the body of above mentioned news article</string>
    <string name="this_is_the_content_of_the_post">This is the content of the post</string>
    <string name="download">Download</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="fragment_lifecycle">Fragment Lifecycle</string>
    <string name="retrofit_room_bottom_navigation">Retrofit + Room + Bottom Navigation</string>
    <string name="alert_dialogue">Alert Dialogue</string>
    <string name="view_pager">View Pager</string>
    <string name="toast_and_snackbars">Toast and SnackBars</string>
    <string name="car_media_login">Car Media Login</string>
    <string name="mvvm_with_data_binding">MVVM with Data Binding</string>
    <string name="broadcast">Broadcast</string>
    <string name="service_lifecycle">Service Lifecycle</string>
    <string name="shared_preference">Shared Preference</string>
    <string name="news_deleted">News deleted</string>
    <string name="news_downloaded">News downloaded</string>
    <string name="swift_and_fast">Swift and Fast</string>
    <string name="swift">Swift and Fast</string>
    <string name="security_assured">Security Assured</string>
    <string name="vaccinated_stuff">Vaccinated Stuff</string>
    <string name="flight_mode_active">Flight Mode Active</string>
    <string name="flight_mode_inactive">Flight Mode Inactive</string>
    <string name="activity_cannot_be_null">Activity cannot be null</string>
    <string name="notification_body">This is a sample notification body of a Foreground Service</string>
    <string name="default_alert_body">You have fired this Default Alert Dialog</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi animi nesciunt magni distinctio blanditiis. Repellat laudantium harum ipsa necessitatibus inventore optio vitae suscipit error animi velit a, tempore eos expedita.</string>
    <string name="ringtone_is_ringing">Ringtone is ringing</string>
    <string name="ringtone_stopped">Ringtone stopped</string>
    <string name="notification_fired">Notification fired</string>
    <string name="notification_removed">Notification removed</string>
    <string name="clicked_button_using_local_brodcast">Clicked Button using Local Broadcast</string>
    <string name="login_successful">Log in Successful!</string>
    <string name="login_failed">Login failed</string>
    <string name="registration_successful">Registration successful</string>
    <string name="fired_toast">You have fired this Toast Message</string>
    <string name="fired_snack">You have fired this Snackbar</string>
    <string name="tap_me">Tap Me</string>
    <string name="pagination_using_paging_3">Pagination using Paging 3</string>
</resources>