<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".01" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95" />


        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/frontpageneue"
            android:text="@string/this_is_a_heading_of_news"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="@+id/guideline12" />

        <ImageView
            android:id="@+id/newsImage"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/sample"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toBottomOf="@+id/newsTitle" />

        <TextView
            android:id="@+id/newsAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/newscycleregular"
            android:gravity="start"
            android:text="@string/this_is_the_of_author"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toBottomOf="@+id/newsImage" />

        <TextView
            android:id="@+id/newsPublish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/newscycleregular"
            android:gravity="end"
            android:text="@string/this_is_publish_date"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toBottomOf="@+id/newsImage" />

        <TextView
            android:id="@+id/newsDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/brawlerregular"
            android:text="@string/this_is_the_body_of_above_mentioned_news_article"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toBottomOf="@+id/newsAuthor" />

        <TextView
            android:id="@+id/newsContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brawlerregular"
            android:text="@string/this_is_the_content_of_the_post"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toBottomOf="@+id/newsDescription" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/download"
            app:icon="@drawable/ic_download"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toBottomOf="@+id/newsContent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>